@@ -69,6 +69,7 @@ source "rules/pcmciautils.in"
 source "rules/pdksh.in"
 source "rules/procps.in"
 source "rules/screen.in"
+source "rules/sed.in"
 source "rules/setserial.in"
 source "rules/sudo.in"
 source "rules/sysfsutils.in"
