@@ -1,0 +1,8 @@
+menuconfig SED
+	bool "sed"
+	help
+	  sed reads the specified files or the standard input if no
+	  files are specified, makes editing changes according to a
+	  list of commands, and writes the results to the standard
+	  output.
+
